--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             appendMessage('User: ' + message);
             userInput.value = '';
 
-            const backendUrl = 'https://Eosforus-chat.hf.space/chat'; // **REPLACE THIS WITH YOUR ACTUAL HUGGING FACE SPACE URL!**
+            const backendUrl = 'https://eosforus-chat.hf.space'; // **REPLACE THIS WITH YOUR ACTUAL HUGGING FACE SPACE URL!**
 
             try {
                 const response = await fetch(backendUrl, {
