--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         // =================================================================================
 
         // WAŻNE: Wklej tutaj skopiowany adres swojego Space'a z Hugging Face!
-        const hfSpaceUrl = "https://eosforus-chat.hf.space"; // <-- UZUPEŁNIJ TO POLE!
+        const hfSpaceUrl = "eosforus-chat.hf.space"; // <-- UZUPEŁNIJ TO POLE!
 
         // Automatyczne budowanie adresów URL dla WebSocket i historii czatu
         const wsUrl = `wss://${hfSpaceUrl}/ws/${username}`;
